--- a/custom_components/rfplayer/translations/fr.json
+++ b/custom_components/rfplayer/translations/fr.json
@@ -25,7 +25,24 @@
         "init": {
           "title": "Options GCE RFPlayer",
           "data": {
-            "automatic_add":"Ajouter les appareil automatiquement lorsqu'un signal est reçu"
+            "automatic_add":"Ajouter les appareil automatiquement lorsqu'un signal est reçu",
+            "conf_format": "Fomats des commandes retournées par RFPlayer",
+            "conf_receiver_disable": "Protocoles à désactiver",
+            "conf_freq_h":"Bande de fréquence haute",
+            "conf_freq_l":"Bande de fréquence basse",
+            "conf_selectivity_h":"Niveau de filtrage signal sur bande haute",
+            "conf_selectivity_l":"Niveau de filtrage signal sur bande haute",
+            "conf_sensitivity_h":"Sensibilité sur bande haute",
+            "conf_sensitivity_l":"Sensibilité sur bande basse",
+            "conf_dsptrigger_h":"Niveau activation DSP sur bande haute",
+            "conf_dsptrigger_l":"Niveau activation DSP sur bande basse",
+            "conf_rflink":"Moteur RFLink",
+            "conf_rflinktrigger_h":"Niveau activation RFLink sur bande haute",
+            "conf_rflinktrigger_l":"Niveau activation RFLink sur bande basse",
+            "conf_lbt":"Niveau de silence avant envoi",
+            "conf_repeater_disable":"Protocoles répétés à désactiver",
+            "conf_ledactivity":"Activité LED",
+            "conf_trace":"Fonctions à tracer"
           }
         }
       }
